--- a/styles.css
+++ b/styles.css
@@ -4479,6 +4479,7 @@ iframe {
     font-style:italic;
     margin-bottom: 30px;
     font-size: 16px;
+    line-height: 2;
 }
 
 .paragraph{
@@ -4497,11 +4498,21 @@ iframe {
 }
 
 @media (max-width:767px){
-
+    .post-content{
+    margin: 200px 5%;
+    }
     .quote, .paragraph {
         font-size: 12px;
-        line-height: 1.3;
+        line-height: 1.5;
         margin-bottom: 20px;
+    }
+
+    .post-header {
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    line-height: 1.4;
     }
 
     .post-date {
@@ -4516,8 +4527,13 @@ iframe {
     }
 
     .image {
-        max-width: 300px;
+        max-width: 200px;
+        
+        margin-bottom: 20px;
+    }
+    .photo {
         margin: auto;
+        margin-bottom: 200px;
     }
 
     .caption {
